--- a/Aulas/Aula09/package.json
+++ b/Aulas/Aula09/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "express": "^4.21.0",
-    "express-handlebars": "^8.0.1",
-    "handlebars": "^4.7.8"
+    "express-handlebars": "^8.0.1"
   }
 }
