--- a/Aulas/Aula30/package.json
+++ b/Aulas/Aula30/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "twilio": "^5.4.2"
   }
 }
